cloudformation/ASG.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Auto Scaling Group CloudFormation Template

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    Description: EC2 Instance Type
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access
  VPCId:
    Type: AWS::EC2::VPC::Id
    Description: VPC Id where the auto scaling group will launch instances
  SubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Subnets for the auto scaling group to launch instances into

Resources:
  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: MyLaunchTemplate  # Consider using camel case for consistency
      LaunchTemplateData:
        InstanceType: !Ref InstanceType
        KeyName: !Ref KeyName
        ImageId: ami-0ebfd941bbafe70c6  # Replace with your desired AMI
        SecurityGroupIds: 
          - !Ref MySecurityGroup  # Corrected to match the resource name

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH And HTTP Access
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier: !Ref SubnetIds
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
      MinSize: '1'
      MaxSize: '3'
      DesiredCapacity: '1'
      TargetGroupARNs: 
        - !Ref MyTargetGroup  # Ensure MyTargetGroup is defined

  MyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VPCId
      Port: 80
      Protocol: HTTP
      HealthCheckProtocol: HTTP
      HealthCheckPort: '80'
      HealthCheckPath: /
      TargetType: instance

Outputs:
  AutoScalingGroupName:
    Description: The name of the auto scaling group
    Value: !Ref AutoScalingGroup
